fix a few erors

--- a/13-ceros.html
+++ b/13-ceros.html
@@ -122,7 +122,7 @@
     <main>
         <div class="navigation-links">
             <a href="/bonos-patacon-y-lecop.html" class="previous-link">⟨ Anterior</a>
-            <a href="/la-impresion.html" class="next-link">Siguiente ⟩</a>
+            <a href="/la-emision.html" class="next-link">Siguiente ⟩</a>
         </div>
 
         <h1>13 Ceros</h1>
@@ -165,7 +165,7 @@
         
         <div class="navigation-links navigation-links-bottom">
             <a href="/bonos-patacon-y-lecop.html" class="previous-link">⟨ Anterior</a>
-            <a href="/la-impresion.html" class="next-link">Siguiente ⟩</a>
+            <a href="/la-emision.html" class="next-link">Siguiente ⟩</a>
         </div>
 
     </main>
