--- a/la-inflacion.html
+++ b/la-inflacion.html
@@ -42,7 +42,7 @@
 
     <main>
         <div class="navigation-links">
-            <a href="/la-impresion.html" class="previous-link">⟨ Anterior</a>
+            <a href="/la-emision.html" class="previous-link">⟨ Anterior</a>
             <a href="/" class="next-link">Siguiente ⟩</a>
         </div>
 
@@ -79,27 +79,21 @@
 
         <br>
 
-        <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/8Xqbna7LAog?rel=0" title="Alto Guiso: ¿Por Qué En Argentina Siempre hay Inflación?"
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
-                encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-
-        <br>
-
         <h2>El Efecto de la Inflación</h2>
 
         <p>
-            Hay cero incentivo en ahorrar en una moneda que pierde valor día a día. Por el contrario, el incentivo es gastar.
+            No hay incentivo en ahorrar en una moneda que pierde valor día a día. Por el contrario, el incentivo es gastar.
         </p>
         <p>
-            La clase media y baja tiende a gastar todo el dinero en bienes y servicios mientras que la clase alta tiende a gastar su dinero en inversiones que crecen en valor a lo largo del tiempo, debido a la inflación.
+            La inflación afecta relativamente más a los sectores con menos recursos que a los de mayores recursos.
+            Los sectores con menos recursos tienden a gastar todo el dinero en bienes y servicios y
+            disponen de menos instrumentos financieros para cubrirse de la perdida del poder adquisitivo que produce la inflación.
         <p>
-            Económicamente la inflación genera una disparidad masiva en la riqueza, inestabilidad social, e irónicamente, más impresión de moneda de parte del gobierno.
+            Económicamente la inflación genera una disparidad masiva en la riqueza, inestabilidad social, e irónicamente, más emisión de moneda de parte del gobierno.
         </p>
         
         <div class="navigation-links navigation-links-bottom">
-            <a href="/la-impresion.html" class="previous-link">⟨ Anterior</a>
+            <a href="/la-emision.html" class="previous-link">⟨ Anterior</a>
             <a href="/" class="next-link">Siguiente ⟩</a>
         </div>
 
@@ -109,6 +103,8 @@
                 es.wikipedia.org/wiki/Inflación</a></li>
             <li><a href="https://www.lanacion.com.ar/economia/13-ceros-el-abrumador-detalle-de-nuestros-billetes-que-demuestra-el-fracaso-argentino-nid04112021/" target="_blank">
                 13 ceros. El abrumador detalle de nuestros billetes que demuestra el fracaso argentino - LA NACION</a></li>
+            <li><a href="https://www.youtube.com/watch?v=8Xqbna7LAog" target="_blank">
+                Alto Guiso: ¿Por Qué En Argentina Siempre hay Inflación? - YouTube</a></li>
         </ul>
 
     </main>
