--- a/peso-ley-18188.html
+++ b/peso-ley-18188.html
@@ -106,7 +106,7 @@
 
         <p>
             En el año 1981 la inflación alcanzó el 130% anual y se emitió el billete de un millón de Pesos Ley.
-            Entre los años 1975 y 1982 el tipo de cambio respecto al dólar se devaluó en más de 200.000% (doscientos mil por ciento).
+            Entre los años 1975 y 1982 el tipo de cambio del peso respecto al dólar tuvo un incremento de más de 200.000% (doscientos mil por ciento).
         </p>
 
         <br>
@@ -122,9 +122,6 @@
             <a href="/emprestito-9-de-julio.html" class="previous-link">⟨ Anterior</a>
             <a href="/peso-argentino.html" class="next-link">Siguiente ⟩</a>
         </div>
-
-        <h2>Fuentes</h2>
-        <a href="https://es.wikipedia.org/wiki/Peso_Moneda_Corriente" target="_blank">es.wikipedia.org/wiki/Peso_Moneda_Corriente</a>
 
         <h3>Fuentes</h3>
         <ul class="sources">
