--- a/primer-papel-moneda.html
+++ b/primer-papel-moneda.html
@@ -81,5 +81,37 @@
             <a href="https://github.com/luciano-renzi/historia-del-peso-argentino" target="_blank" rel="noopener noreferrer" class="header-github-link"></a>
         </p>
     </footer>
+
+    <script>
+        let imageList = [
+            '/static/img/Cinco_pesos_moneda_corriente.jpg',
+            '/static/img/peso_moneda_nacional.jpg',
+            '/static/img/emprestito-9-de-julio.jpg',
+            '/static/img/peso-ley.jpg',
+            '/static/img/peso-argentino.jpg',
+            '/static/img/100-australes.jpg',
+            '/static/img/peso-ex-convertible.jpg',
+            '/static/img/crisis-2001-corralito.webp',
+            '/static/img/patacon.jpg',
+            '/static/img/crisis-2001-corralito.webp'
+        ];
+
+        function loadImages() {
+            var hiddenCache = document.createElement("div");
+            hiddenCache.style.display = "none";
+            document.body.appendChild(hiddenCache);
+            // or for loop if ECMA 3
+            imageList.forEach(function(urlStr){
+                console.log(urlStr)
+                var hiddenImg = document.createElement("img");
+                hiddenImg.src = urlStr;
+                // hiddenCache.appendChild(hiddenImg)
+            });
+        }
+
+        setTimeout(() => {
+            loadImages();
+        }, 2000);
+    </script>
 </body>
 </html>
