--- a/el-corralito-crisis-2001.html
+++ b/el-corralito-crisis-2001.html
@@ -65,7 +65,7 @@
 
         <div class="video-container">
             <video controls style="max-width: 700px; width: 100%">
-                <source src="/static/other/de-la-rua-estado-de-sitio.ogv" type="video/ogg">
+                <source src="/static/other/de-la-rua-estado-de-sitio.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
