--- a/austral.html
+++ b/austral.html
@@ -58,13 +58,6 @@
             Lanzado mediante el llamado “Plan Austral” cuyo objetivo era contener la inflación. Se le restaron tres ceros a su antecesor.
         </p>
 
-        <!-- <div>
-            <figure>
-                <img alt="5000 pesos argentinos sellados" src="/static/img/5000-pesos-argentinos-sellados-a-australes.jpg">
-                <figcaption><i>5.000 Pesos argentinos sellados para convertirlos en 5 Australes.</i></figcaption>
-            </figure>
-        </div> -->
-
         <br>
 
         <h3>Devaluacion del peso - Tato Bores</h3>
@@ -101,6 +94,16 @@
         <p>
             Por la situación económica, se adelantaron las próximas elecciones. Alfonsín renunció el 9 de julio de 1989 para anticipar la entrega a su sucesor, Carlos Menem.
         </p>
+
+        <br>
+
+        <figure>
+            <img alt="tapas de los diarios 9 de mayo y 10 de noviembre de 1989" src="/static/img/tapas-de-los-diarios-1989.png">
+            <figcaption><i>Tapas de los diarios, 9 de mayo y 10 de noviembre de 1989.</i></figcaption>
+            <figcaption><i><a href="https://twitter.com/pregonerol">@pregonerol</a></i></figcaption>
+        </figure>
+
+        <br>
 
         <p>
             En 1990 hubo otro pico de inflación en marzo y se alcanzó una inflación anual de 2314%.
