--- a/el-corralito-crisis-2001.html
+++ b/el-corralito-crisis-2001.html
@@ -81,6 +81,16 @@
         
         <br>
 
+        <div>
+            <figure>
+                <img alt="Manifestaciones crisis del 2001" src="/static/img/manifestaciones-crisis-2001.jpg">
+            </figure>
+        </div>
+
+
+        <br>
+        <br>
+
         <div class="video-container">
             <iframe src="https://www.youtube.com/embed/QRi1BeCq1Nk?rel=0" title="Discurso de asunción Duhalde 01/01/2002"
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
@@ -109,6 +119,12 @@
                 es.wikipedia.org/wiki/Corralito</a></li>
             <li><a href="https://es.wikipedia.org/wiki/Corral%C3%B3n" target="_blank">
                 es.wikipedia.org/wiki/Corralón</a></li>
+            <li><a href="https://www.youtube.com/watch?v=ydCSX_OEXwU" target="_blank">
+                <img src="/static/img/youtube-icon.svg" class="youtube-icon inline-icon">
+                CORRALITO DE 2001: la MEDIDA que MARCÓ EL FIN de la CONFIANZA en la ARGENTINA
+                </a>
+            </li>
+
         </ul>
 
     </main>
