--- a/emprestito-9-de-julio.html
+++ b/emprestito-9-de-julio.html
@@ -50,7 +50,8 @@
 
         <div>
             <figure>
-                <img alt="emprestito de recuperación 9 de julio" src="/static/img/emprestito-9-de-julio.jpg">
+                <img alt="emprestito de recuperación 9 de julio" src="/static/img/emprestito-9-de-julio.jpg"
+                    style="max-width: 700px">
             </figure>
         </div>
 
@@ -61,7 +62,7 @@
         </p>
 
         <p>
-            Los trabajadores y jubilados cobraban sus haberes mediantes estos bonos, tamaño A4 y cuando iban a gastarlos en comercios, se los recibían al 70% de su denominación.
+            Los trabajadores y jubilados cobraban sus haberes mediantes estos bonos, con un tamaño de 14,5 cm x 19,5 cm, y cuando iban a gastarlos en comercios, se los recibían al 70% de su denominación.
         </p>
 
         <div class="navigation-links navigation-links-bottom">
