--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static/css/main.css">
 
     <meta charset="utf-8">
-    <meta name="description" content="Breve historia del Peso Argentino">
+    <meta name="description" content="Breve historia del Peso Argentino. Un recorrido por todas las monedas argentinas de los últimos 200 años. Desde 1826 hubieron en Argentina 6 monedas distintas. ¿Cuáles fueron? y ¿En qué contexto existieron?">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Historia del Peso Argentino</title>
