--- a/la-inflacion.html
+++ b/la-inflacion.html
@@ -104,7 +104,15 @@
             <li><a href="https://www.lanacion.com.ar/economia/13-ceros-el-abrumador-detalle-de-nuestros-billetes-que-demuestra-el-fracaso-argentino-nid04112021/" target="_blank">
                 13 ceros. El abrumador detalle de nuestros billetes que demuestra el fracaso argentino - LA NACION</a></li>
             <li><a href="https://www.youtube.com/watch?v=8Xqbna7LAog" target="_blank">
-                Alto Guiso: ¿Por Qué En Argentina Siempre hay Inflación? - YouTube</a></li>
+                <img src="/static/img/youtube-icon.svg" class="youtube-icon inline-icon">
+                Alto Guiso: ¿Por Qué En Argentina Siempre hay Inflación?
+                </a>
+            </li>
+            <li><a href="https://www.youtube.com/watch?v=YqnXxRJR7Ow" target="_blank">
+                <img src="/static/img/youtube-icon.svg" class="youtube-icon inline-icon">
+                En menos de 2 minutos 🕰️ Te explicamos que es la inflación | Junto a Florencia Ravelo Niglia
+                </a>
+            </li>
         </ul>
 
     </main>
