--- a/peso-argentino.html
+++ b/peso-argentino.html
@@ -57,7 +57,7 @@
         </div>
 
         <p>
-            Con este nuevo peso se le restaron cuatro ceros al anterior. Fué la moneda nacional con menor período de vigencia
+            Con este nuevo peso se le restaron cuatro ceros al anterior. Fué la moneda nacional con menor período de vigencia.
         </p>
 
         <div class="navigation-links navigation-links-bottom">
